progress on the home pagestructure

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
 					</div>
 				</div>
 				
+				<div class="loadmore-btn-container">
+					<button type="button">Load more</button>
+				</div>
+				
 			</div>
 		</section>
 		
