load more btn, added footer, and some layout fixes.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
 				</div>
 				
 			</div>
+			
+			<footer class="page-footer">
+				<div class="footer-links"></div>
+				<div class="copyright">Copyright © 2013 - 2017. Android.me. All Rights Reserved.</div>
+			</footer>
+			
 		</section>
 		
 </html>
