--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
 			</div>
 			
 			<footer class="page-footer">
-				<div class="footer-links"></div>
-				<div class="copyright">Copyright © 2013 - 2017. Android.me. All Rights Reserved.</div>
+				<div class="copyright">Android is a trademark of Google Inc.<br>© 2013 - 2017 Android.me News. All Rights Reserved.</div>
+				<div class="footerLinks">
+					<a href="">Advertise with us</a> | <a href="">Contact</a> | <a href="">Privacy Policy</a> | <a href="">Legal Stuff</a>
+				</div>
 			</footer>
 			
 		</section>
