added Article admin panel bar & made some fixes on the new Post page.

--- a/article.html
+++ b/article.html
@@ -66,6 +66,23 @@
         
         <!-- Article container -->
         <section class="main-container">
+		
+			<!-- Article Admin panel -->
+			<div class="adminPanelCard">
+				<div class="publishToggleContainer">
+					<div class="toggle publishToggle">  
+						<input type="checkbox" id="hasNoState" name="hasNoState" >  
+						<label for="hasNoState">
+							<span class="lever"></span>
+							<span class="slot"></span>
+							<span class="text">Published</span>
+						</label>  
+						<div class="unpublishedLabelTxt">Unpublished</div>
+					</div>
+				</div>
+				<div class="editArticleBtn">Edit</div>
+				<div class="InfoTextAdminPanel">Last edit: less than a minute ago.</div>
+			</div>
         
             <!-- Vote system -->
             <div class="vote-container">       <!-- Back-end: TO BE IMPLEMENTED! -->
