--- a/post.html
+++ b/post.html
@@ -59,11 +59,11 @@
                     
                     <!-- From/Via section -->
                     <label class="post-source-label">Source:</label>
-                    <input id="post-source-name" name="from" type="text" placeholder="The Verge" required />
-                    <input id="post-source-url" name="from" type="text" placeholder="http://theverge.com" required />
+                    <input id="post-source-name" name="from" type="text" placeholder="The Verge"/>
+                    <input id="post-source-url" name="from" type="text" placeholder="http://theverge.com"/>
                     
-                    <!-- Submit form publish article -->
-                    <input id="post-publish" type="submit" value="Publish"/>
+                    <!-- Submit form and post article (Status: unpublished) -->
+                    <input id="post-publish" type="submit" value="Post"/>
                 </form>
             </div>
         </section>
