intial structure for the Edit News page.

--- a/article.html
+++ b/article.html
@@ -80,7 +80,7 @@
 						<div class="unpublishedLabelTxt">Unpublished</div>
 					</div>
 				</div>
-				<div class="editArticleBtn">Edit</div>
+				<a href="newsEdit.html"><div class="editArticleBtn">Edit</div></a>
 				<div class="InfoTextAdminPanel">Last edit: less than a minute ago.</div>
 			</div>
         
