page loader on index, some minor UI fixes on index and news, fixes for the Disqus container

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     </head>
     
     <body>
+	
+		<!-- Page loader -->
+		<div id="pageloader">
+			<svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+				<circle class="circle" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+			</svg>
+		</div>
     
         <!-- Top header bar (menu) -->
         <header class="page-header">
@@ -237,7 +244,14 @@
         <script src="res/js/main.js"></script>
 		
 		<script>
-			
+		
+			// Page loader (Change implementation?)
+			$(window).load(function() {
+				setTimeout(function(){
+					$("#pageloader").fadeOut('fast');
+				}, 250);
+			});
+
 			
 			// Tag selection menu
 			
