Fixes on the new text editor & other minor changes

--- a/post.html
+++ b/post.html
@@ -100,7 +100,7 @@
 					toolbar: [
 						['bold', 'italic', 'underline', 'strike'],
 						[{ 'color': [ '#E91E63', '#6472cd', '#03A9F4', '#00BCD4', '#FFC107', '#E0E0E0', '#333' ] }], 
-						['blockquote'],
+						['blockquote', { 'align': [false, 'right', 'center'] }],
 						['link', 'image', 'video'],
 						['clean']
 					]
@@ -125,10 +125,11 @@
 
 W.I.P / TO-DO:
 
-- Improve Editor (custom styles);
+- Continue to improve Editor (custom styles) - Minor;
 - Guidelines / Instructions (separate page / article example as placeholder on editor / ... ?);
 - find other solution for main image selection (better UX);
 - 
+- Import styles for Quote, links, and videos to the main Article page.
 
 
 ===================== -->
