changes on the add tags btn & updated styles for the tooltip on the article page

--- a/newsEdit.html
+++ b/newsEdit.html
@@ -51,9 +51,9 @@
 						&nbsp;&nbsp;|&nbsp;&nbsp;Posted:&nbsp;
 						<a>Mon, Jan 26, 2015</a>
 						&nbsp;&nbsp;|&nbsp;&nbsp;Tags:&nbsp;
-						<span class="news_tags" tag="NEXUS" onclick="$(this).hide()">NEXUS <i class="material-icons">remove_circle</i></span>
-						<span class="news_tags" tag="OTHERS" onclick="$(this).hide()">APPLE <i class="material-icons">remove_circle</i></span>
-						<span class="news_tags" tag="MOTOROLA" onclick="$(this).hide()">MOTOROLA <i class="material-icons">remove_circle</i></span>
+						<span class="news_tags" tag="NEXUS" onclick="$(this).hide()">Nexus <i class="material-icons">remove_circle</i></span>
+						<span class="news_tags" tag="OTHERS" onclick="$(this).hide()">Apple <i class="material-icons">remove_circle</i></span>
+						<span class="news_tags" tag="MOTOROLA" onclick="$(this).hide()">Motorola <i class="material-icons">remove_circle</i></span>
 						<span class="addTag addDisabled" href=""><i class="material-icons">add_circle</i></span>
 					</div>
 				   
