--- a/post.html
+++ b/post.html
@@ -52,7 +52,7 @@
                     <!-- Tags section -->
                     <label class="post-tags-label">Tags:</label>
 					<div class="addTagsBtn">
-						Add tags
+						Add tags <i class="material-icons">add_circle</i>
 					</div>
                     
                     <!-- Main image section -->
@@ -131,7 +131,7 @@ W.I.P / TO-DO:
 - Blue outline on editor when focus;
 - Guidelines / Instructions (separate page / article example as placeholder on editor / ... ?);
 - find other solution for main image selection (better UX);
-- 
+- Add tag modal;
 - Import styles for Quote, links, and videos to the main Article page.
 
 
