--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <nav class="header-menu">       <!-- TO-DO: links to the other pages -->
 				<div class="respLogo"></div>
                 <ul>
-                    <li><a href="#">news</a></li>
-                    <li><a href="#">app</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">App</a></li>
+                    <li><a href="#">Contact</a></li>
                     <li><a href="#">App Review</a></li>
                     <li><a href="#">Profile</a></li>
                 </ul>
