more responsiviness on news page (home) & other minor fixes.

--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
 					<i class="material-icons">arrow_back</i>
 				</div>
 				<h2>
-					<span class="subheading">Enter your email and we'll send you a link to reset your password</span>
+					<span class="subheading">Enter your email to receive a link to reset your password</span>
 				</h2>
 				<form action="resetpassword.html">
 					<div class="group">
