(very) minor update

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<p>A new way to stay informed and explore the world of Google's
 				mobile platform. Be part of this amazing community!</p>
 				<div class="bannerCtaButtons">
-					<a href="" class="ctaOne">
+					<a href="login.html	" class="ctaOne">
 						<div>Join Now</div>
 					</a>
 					<a href="" class="ctaTwo">
