--- a/newaccount.html
+++ b/newaccount.html
@@ -135,10 +135,9 @@
 W.I.P / TO-DO:
 
 - Make sure everything is responsive;
-- Info tooltip on Username input;
 - Errors & validations;
-- Accessibility (?);
-- 
+- Option to come back to the login page (back arrow)?
+-
 
 
 ===================== -->
