change navigation structure & updated footer

--- a/article.html
+++ b/article.html
@@ -48,15 +48,16 @@
                 </a>
             </div>
             
-            <!-- nav menu -->
+             <!-- nav menu -->
             <nav class="header-menu">       <!-- TO-DO: links to the other pages -->
 				<div class="respLogo"></div>
                 <ul>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">App</a></li>
+                    <li><a href="index.html">News</a></li>
+					<li><a href="q_and_a.html">Q&A</a></li>
+                    <!--<li><a href="#">App</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">App Review</a></li>
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">App Review</a></li>-->
+                    <li><a href="login.html">Profile</a></li>
                 </ul>
             </nav>
 			
@@ -209,7 +210,7 @@
         <footer class="page-footer">
 			<div class="copyright">Android is a trademark of Google Inc.<br>© 2013 - 2017 Android.me News. All Rights Reserved.</div>
 			<div class="footerLinks">
-				<a href="">Advertise with us</a> | <a href="">Contact</a> | <a href="">Privacy Policy</a> | <a href="">Legal Stuff</a>
+				<a href="">Advertise with us</a> | <a href="">Contact</a> | <a href="https://github.com/JeremyPP/Android.me-2.0" target="_blank">GitHub</a> | <a href="">Legal Stuff</a>
 			</div>
 		</footer>
         
