testing Search bar implementation (UI).

--- a/profile.html
+++ b/profile.html
@@ -45,6 +45,13 @@
                     <img src="res/img/logo.png" alt="Android.me logo">
                 </a>
             </div>
+			
+			<!-- Search bar -->
+			<div class="searchBarMain">
+				<i class="material-icons searchBarSearchIcon noUserSelect">search</i>
+				<input type="text" name="header-search" value="" id="searchBarInput" placeholder="Search, discover, explore...">
+				<i class="material-icons clearSearchBarField noUserSelect" onClick="resetInput()">clear</i>
+			</div>
             
              <!-- nav menu -->
             <nav class="header-menu">       <!-- TO-DO: links to the other pages -->
@@ -69,10 +76,7 @@
 				</div>
 				<div class="profileInfoLeft">
 					<div class="profileName">Emmett	Stevenson<i class="profileMenuIcon noUserSelect material-icons">more_vert</i></div>
-					<div class="profileEmail">emmetspamemail@gmail.com</div>
-					<!--<div class="profileActionsContainer">
-						<div class="editProfileBtn noUserSelect">Edit profile</div>
-					</div>-->
+					<div class="profileUserStatus">Reader</div>
 				</div>
 			</div>
 			
