--- a/article.html
+++ b/article.html
@@ -47,6 +47,13 @@
                     <img src="res/img/logo.png" alt="Android.me logo">
                 </a>
             </div>
+			
+			<!-- Search bar -->
+			<div class="searchBarMain">
+				<i class="material-icons searchBarSearchIcon noUserSelect">search</i>
+				<input type="text" name="header-search" value="" id="searchBarInput" placeholder="Search, discover, explore...">
+				<i class="material-icons clearSearchBarField noUserSelect" onClick="resetInput()">clear</i>
+			</div>
             
              <!-- nav menu -->
             <nav class="header-menu">       <!-- TO-DO: links to the other pages -->
