changes on search bar

--- a/profile.html
+++ b/profile.html
@@ -47,9 +47,9 @@
             </div>
 			
 			<!-- Search bar -->
-			<div class="searchBarMain">
-				<i class="material-icons searchBarSearchIcon noUserSelect">search</i>
-				<input type="text" name="header-search" value="" id="searchBarInput" placeholder="Search, discover, explore...">
+			<div class="searchBarMain searchBarNotFocus">
+				<i class="searchBarIconNotFocus material-icons searchBarSearchIcon noUserSelect">search</i>
+				<input type="text" name="header-search" value="" class="searchBarInputNotFocus" id="searchBarInput" placeholder="Search, discover, explore...">
 				<i class="material-icons clearSearchBarField noUserSelect" onClick="resetInput()">clear</i>
 			</div>
             
