--- a/newsEdit.html
+++ b/newsEdit.html
@@ -51,10 +51,13 @@
 						&nbsp;&nbsp;|&nbsp;&nbsp;Posted:&nbsp;
 						<a>Mon, Jan 26, 2015</a>
 						&nbsp;&nbsp;|&nbsp;&nbsp;Tags:&nbsp;
+						<!-- DEMO ONLY! -->
 						<span class="news_tags" tag="NEXUS" onclick="$(this).hide()">Nexus <i class="material-icons">remove_circle</i></span>
-						<span class="news_tags" tag="OTHERS" onclick="$(this).hide()">Apple <i class="material-icons">remove_circle</i></span>
-						<span class="news_tags" tag="MOTOROLA" onclick="$(this).hide()">Motorola <i class="material-icons">remove_circle</i></span>
-						<span class="addTag addDisabled" href=""><i class="material-icons">add_circle</i></span>
+						<span class="news_tags" tag="NEXUS" onclick="$(this).hide()">Apple <i class="material-icons">remove_circle</i></span>
+						<span class="news_tags" tag="NEXUS" onclick="$(this).hide()">Motorola <i class="material-icons">remove_circle</i></span>
+						<div class="addTagsBtn">
+							Add tags <i class="material-icons">add_circle</i>
+						</div>
 					</div>
 				   
                     <!-- Main image -->
@@ -86,6 +89,101 @@
                     <input id="saveEditPost" type="submit" value="Save"/>
                 </form>
             </div>
+			
+			<!--  -->
+			<div class="tagModalOverlay">
+
+				<div class="tagModalContainer modal">
+					<h1>Tags</h1>
+					<div class="modalContainer">
+						<!-- STATIC (for demo only!) -->
+						<div class="tagListCol">
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Samsung</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Nexus</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Developers</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Lenovo</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Update</label>
+							</div>
+						</div>
+						<div class="tagListCol">
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Apple</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Google</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">CES</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Huawei</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Rumors</label>
+							</div>
+						</div>
+						<div class="tagListCol">
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Apps</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">MWC</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">HTC</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Asus</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Others</label>
+							</div>
+						</div>
+						<div class="tagListCol">
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Sony</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">LG</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">ZTE</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Motorola</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Nokia</label>
+							</div>
+						</div>
+						<div class="tagListCol">
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">OnePlus</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">Oppo</label>
+							</div>
+							<div class="tagItemSelect">
+								<label><input type="checkbox" name="checkbox" value="value" class="fs1">IFA</label>
+							</div>
+						</div>
+					</div>
+					<div class="modalFooter">
+						<div class="modalActionBtn closeModalBtn">Cancel</div>
+						<div class="modalActionBtn" onclick="$('.news_tags').show();$('.tagModalOverlay').fadeOut(100);">Add</div>
+					</div>
+				</div>
+			
+			</div>			
         </section>
 		
 		<button id="btn1" onClick="showContentHTML()">Get HTML data from editor</button>
@@ -97,6 +195,18 @@
 				element2 = document.getElementById("post-title");
 				element2.style.height = "1px";
 				element2.style.height = 2 + (element2.scrollHeight)+"px";
+				
+				/// Show overlay & Open modal
+  				// FOR DEMO PURPOSES ONLY! Need different modal implementation.
+				$( ".closeModalBtn" ).click(function() {
+					$(".tagModalOverlay").fadeOut(100);
+				});
+				$( ".addTagsBtn" ).click(function() {
+					$(".tagModalOverlay").fadeIn(150);
+				});
+					$(".tagModalContainer").click(function(event) {
+					event.stopPropagation();
+				});
 
 			});
 			
