--- a/article.html
+++ b/article.html
@@ -131,7 +131,7 @@
 						</div>
 						<div class="articleInfoBarRightContainer">
 							<div class="articleInfoLikes">17</div>
-							<div class="articleInfoLikesBtn">
+							<div class="articleInfoLikesBtn noUserSelect">
 								<i class="material-icons">favorite_border</i>
 								<i class="material-icons" style="display:none;">favorite</i>
 							</div>
