search bar script inprovements & added search autocomplete on home page (UI only).

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
 				<i class="searchBarIconNotFocus material-icons searchBarSearchIcon noUserSelect">search</i>
 				<input type="text" name="header-search" value="" class="searchBarInputNotFocus" id="searchBarInput" placeholder="Search, discover, explore...">
 				<i class="material-icons clearSearchBarField noUserSelect" onClick="resetInput()">clear</i>
+				
+				<!-- Search autocomplete -->
+				<!-- For demo only (Static) -->
+				<div class="searchAutocompleteMain" style="display: none;">
+					<ul>
+						<li><span>Ga</span></li>
+						<li><span>Galaxy</span> s8</li>
+						<li>Samsung <span>Galaxy</span></li>
+					</ul>
+				</div>
 			</div>
             
              <!-- nav menu -->
