Tags have now different colors.

--- a/article.html
+++ b/article.html
@@ -252,7 +252,7 @@
 
 W.I.P / TO-DO:
 
-- Responsive mode: voting, nav (menu), some other style fixes;
+- Responsive mode: voting, nav (menu), some other style fixes; (DONE?)
 - navigate with keyboard;
 - G.A. script;
 - Share links (Facebook, Twitter, Google Plus);
