Changed profile card position, replaced nav links, updated readme.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="respLogo"></div>
                 <ul>
                     <li><a href="index.html">News</a></li>
-					<li><a href="q_and_a.html">Q&A</a></li>
+					<li><a href="reviews.html">Reviews</a></li>
                     <li><a href="login.html">Profile</a></li>
                 </ul>
             </nav>
