Added some responsiviness on the profile & changed user for testing.

--- a/profile.html
+++ b/profile.html
@@ -56,13 +56,13 @@
 			<!-- Profile menu -->
 			<div class="profileAvatarContainer">
 				<div class="profileAvatar">
-					<img src="users_images/Riley_Blue.jpg" class="profilePicture">
+					<img src="users_images/Emmett_Stevenson.jpg" class="profilePicture">
 				</div>
 				
 				<!-- Profile card -->
 				<div class="profileCard">
 					<div class="profCard-header">
-						<div class="profHeader-username">Riley Blue</div>
+						<div class="profHeader-username">Emmett Stevenson</div>
 						<div class="profHeader-status">Contributor</div>
 					</div>
 					<div class="profCard-menu">
