Trigger btn for Admin panel banner.

--- a/index.html
+++ b/index.html
@@ -141,10 +141,16 @@
 						</a>
 						<p>By Jérémy Pougnet</p>
 						<div class="bannerFeaturedButton">
-							<a href="article.html" class="featuredLink">
+							<a href="article.html" class="featuredLink noUserSelect">
 								<div>Read more</div>
 							</a>
 						</div>
+						
+						<!-- Admin panel trigger button -->
+						<div class="adminPanelBtn noUserSelect" id="openAdminPanelBanner">
+							<i class="material-icons">settings</i>
+						</div>
+					
 					</div>
 					<div class="featuredBannerColorOverlay"></div>
 				</div>
